<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditReminderDialog">

    <LinearLayout
        android:id="@+id/ReminderNameRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/ReminderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/ReminderName" />

        <EditText
            android:id="@+id/ReminderNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/EnterReminderName"
            android:importantForAutofill="no"
            android:inputType=""
            android:minHeight="48dp"
            tools:ignore="LabelFor,TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ReminderTypeRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReminderNameRow">

        <TextView
            android:id="@+id/ReminderType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/ReminderType" />

        <EditText
            android:id="@+id/ReminderTypeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/EnterType"
            android:importantForAutofill="no"
            android:inputType=""
            android:minHeight="48dp"
            tools:ignore="LabelFor,TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ReminderDescriptionRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReminderTypeRow">

        <TextView
            android:id="@+id/ReminderDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/ReminderDescription" />

        <EditText
            android:id="@+id/ReminderDescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/EnterDescription"
            android:importantForAutofill="no"
            android:inputType=""
            android:minHeight="48dp"
            tools:ignore="LabelFor,TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ReminderDateRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReminderDescriptionRow">

        <TextView
            android:id="@+id/ReminderDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/EnterDate" />

        <Button
            android:id="@+id/ReminderDateText"
            android:layout_width="219dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/SelectDate"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ReminderTimeRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReminderDateRow">

        <TextView
            android:id="@+id/ReminderTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/EnterTime" />

        <Button
            android:id="@+id/ReminderTimeText"
            android:layout_width="219dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/SelectTime"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/DateTimeClearRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReminderTimeRow">

        <Button
            android:id="@+id/ClearDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:gravity="center"
            android:text="Clear Date"
            />
        <Button
            android:id="@+id/ClearTimeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="Clear Time"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ReminderRepeatRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DateTimeClearRow">

        <TextView
            android:id="@+id/ReminderRepeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/select_repeat" />

        <RadioGroup
            android:id="@+id/RepeatOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="49dp"
            tools:layout_editor_absoluteY="638dp">

            <RadioButton
                android:id="@+id/RepeatNone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/none" />

            <RadioButton
                android:id="@+id/RepeatDaily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/daily" />

            <RadioButton
                android:id="@+id/RepeatWeekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/weekly" />

            <RadioButton
                android:id="@+id/RepeatMonthly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/monthly" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/ExistingReminderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/select_existing_reminder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReminderRepeatRow" />

    <Button
        android:id="@+id/SaveReminderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ExistingReminderButton" />

</androidx.constraintlayout.widget.ConstraintLayout>