<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle"
    android:orientation="horizontal"
    android:padding="15dp">

    <CheckBox
        android:id="@+id/ReminderCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/ReminderItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/ReminderCheckbox"
        android:text="@string/Reminder"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/ReminderListDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/ReminderItem"
        android:text="12:00 AM - July 6"
        android:textColor="#757575"
        android:textSize="16sp"
        tools:ignore="HardcodedText" />

    <ImageButton
        android:id="@+id/ReminderEditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/ReminderListDescription"
        android:background="@android:color/transparent"
        android:contentDescription="@string/todo"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_edit_24"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/ReminderInfoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/ReminderEditButton"
        android:background="@android:color/transparent"
        android:contentDescription="@string/todo"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_info_24" />
</RelativeLayout>